crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_search_with_file_type.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="256000"
  total_lines="2"
  display_lines="1-2"
  pattern="class"
  file_type="py"
><![CDATA[models.py:1:class User:
views.py:5:class HomeView:]]>
</search_results>
