crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_undo_no_changes.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/unchanged_file.txt"
  status="no_changes"
>
</file_undo>
